--- a/lib/package.json
+++ b/lib/package.json
@@ -36,12 +36,14 @@
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@ls-stack/extended-lint": "^0.3.1",
+    "@ls-stack/utils": "^3.17.0",
     "@types/babel__core": "^7.20.5",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.7",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "@vitest/ui": "^2.1.3",
+    "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "eslint": "^9.13.0",
     "eslint-plugin-unicorn": "^56.0.0",
     "eslint-plugin-vitest": "^0.5.4",
@@ -51,12 +53,11 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
     "vite": "^4.5.5",
-    "vitest": "^2.1.3",
-    "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020"
+    "vitest": "^2.1.9"
   },
   "peerDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-plugin-react-compiler": "*",
-    "vite": ">=4.0.0||>=5.0.0",
-    "@babel/core": "^7.0.0"
+    "vite": ">=4.0.0||>=5.0.0"
   }
 }
