--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,20 +1,3 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "target": "ESNext",
-    "moduleResolution": "node",
-    "module": "ESNext",
-    "jsx": "preserve",
-    "skipLibCheck": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "strictNullChecks": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "alwaysStrict": true,
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
-    "forceConsistentCasingInFileNames": true,
-    "strictPropertyInitialization": true
-  }
+  "extends": "../tsconfig.json"
 }
