Enhance project documentation in CLAUDE.md, update package.json scripts for streamlined testing and development, and implement the Vindur Babel plugin for CSS transformation. Add tests for CSS styles in development mode and refine the transform function to support file paths and development flags.

--- a/lib/package.json
+++ b/lib/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:update-snapshots": "vitest --u",
     "lint": "pnpm tsc && pnpm eslint",
     "tsc": "tsc -p tsconfig.prod.json",
     "eslint": "CI=true eslint --color src/ --max-warnings 0",
