Enhance documentation in CLAUDE.md with typesafety guidelines, update package.json to include a new UI test script, and modify pnpm-lock.yaml for dependency updates. Introduce new ESLint and Prettier configurations for improved code quality and formatting. Implement the Vindur Babel plugin with enhanced variable resolution and error handling in CSS transformations, and expand test coverage for various CSS scenarios, including interpolation and error handling.

--- a/lib/package.json
+++ b/lib/package.json
@@ -11,6 +11,8 @@
     "lint": "pnpm tsc && pnpm eslint",
     "tsc": "tsc -p tsconfig.prod.json",
     "eslint": "CI=true eslint --color src/ --max-warnings 0",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "build": "pnpm lint && pnpm build:no-test",
     "build:no-test": "tsup --minify --dts",
     "npm-publish": "pnpm publish --access=public",
@@ -51,7 +53,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-unicorn": "^56.0.0",
     "eslint-plugin-vitest": "^0.5.4",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "tsm": "^2.3.0",
     "tsup": "^8.3.0",
     "typescript": "^5.6.3",
