Update pnpm-lock.yaml and package.json to include @babel/generator and @types/babel__generator dependencies. Refactor babel-plugin.ts to simplify expression source generation using the new generator import. Modify CSS test snapshots for improved error messages in interpolation scenarios.

--- a/lib/package.json
+++ b/lib/package.json
@@ -7,7 +7,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "test:update-snapshots": "vitest --u",
+    "test:update-snapshots": "vitest run --u ",
     "lint": "pnpm tsc && pnpm eslint",
     "tsc": "tsc -p tsconfig.prod.json",
     "eslint": "CI=true eslint --color src/ --max-warnings 0",
@@ -41,9 +41,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
+    "@babel/generator": "^7.28.0",
     "@ls-stack/extended-lint": "^0.3.1",
     "@ls-stack/utils": "^3.17.0",
     "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.7",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
