--- a/lib/package.json
+++ b/lib/package.json
@@ -42,29 +42,27 @@
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/generator": "^7.28.0",
-    "@ls-stack/extended-lint": "^0.3.1",
+    "@ls-stack/extended-lint": "^0.49.0",
     "@ls-stack/utils": "^3.17.1",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
-    "@types/node": "^22.7.7",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
-    "@vitest/ui": "^2.1.3",
-    "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
-    "eslint": "^9.13.0",
-    "eslint-plugin-unicorn": "^56.0.0",
+    "@types/node": "^24.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "@vitest/ui": "^3.2.4",
+    "eslint": "^9.31.0",
+    "eslint-plugin-unicorn": "^60.0.0",
     "eslint-plugin-vitest": "^0.5.4",
     "prettier": "^3.6.2",
     "tsm": "^2.3.0",
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^4.5.5",
-    "vitest": "^2.1.9"
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-plugin-react-compiler": "*",
-    "vite": ">=4.0.0||>=5.0.0"
+    "vite": "^7.0.0"
   }
 }
