--- a/lib/package.json
+++ b/lib/package.json
@@ -9,7 +9,7 @@
     "test:ui": "vitest --ui",
     "lint": "pnpm tsc && pnpm eslint",
     "tsc": "tsc -p tsconfig.prod.json",
-    "eslint": "CI=true eslint --color src/ --max-warnings 0",
+    "eslint": "CI=true eslint --color src/ --max-warnings 0 --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "build": "pnpm lint && pnpm build:no-test",
