--- a/lib/package.json
+++ b/lib/package.json
@@ -46,6 +46,7 @@
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
     "@types/node": "^24.1.0",
+    "@types/react": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "@vitest/ui": "^3.2.4",
