--- a/lib/package.json
+++ b/lib/package.json
@@ -38,6 +38,9 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "dependencies": {
+    "colord": "^2.9.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/generator": "^7.28.0",
