--- a/lib/package.json
+++ b/lib/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-unicorn": "^60.0.0",
     "eslint-plugin-vitest": "^0.5.4",
     "prettier": "^3.6.2",
+    "react": "^18.2.0",
     "tsm": "^2.3.0",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
@@ -66,6 +67,7 @@
   },
   "peerDependencies": {
     "@babel/core": "^7.0.0",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "react": "^19.1.0"
   }
 }
