Refactor dynamic color handling and improve JSX attribute merging
- Enhanced the handling of dynamic color props in JSX by introducing a new `_sp` method for better integration with spread attributes.
- Updated the logic for merging class names and styles when using spread props, ensuring proper precedence and conflict resolution.
- Added new utility functions for merging class names and styles, improving code clarity and maintainability.
- Updated tests to validate the new behavior of dynamic colors and spread props, ensuring accurate integration and expected outcomes.

--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "lib:test": "pnpm --filter vindur run test",
     "lib:test:ui": "pnpm --filter vindur run test:ui"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^24.1.0"
+  }
 }
