Enhance code quality and project guidelines
- Updated CLAUDE.md to include new code optimization practices using `filterWithNarrowing` and `findWithNarrowing`.
- Added a new linting task in .vscode/tasks.json for improved code quality checks.
- Refactored functions in ast-utils.ts for better readability and consistency.
- Introduced utility functions in utils.ts to streamline array handling with type narrowing.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,11 @@
       "label": "test UI",
       "type": "npm",
       "script": "lib:test:ui"
+    },
+    {
+      "label": "lint",
+      "type": "npm",
+      "script": "lint"
     }
   ]
 }
