--- a/lib/package.json
+++ b/lib/package.json
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/generator": "^7.28.0",
-    "@ls-stack/extended-lint": "^0.49.0",
+    "@ls-stack/extended-lint": "^0.50.0",
     "@ls-stack/utils": "^3.17.1",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
@@ -67,7 +67,7 @@
   },
   "peerDependencies": {
     "@babel/core": "^7.0.0",
-    "vite": "^7.0.0",
-    "react": "^19.1.0"
+    "react": "^19.1.0",
+    "vite": "^7.0.0"
   }
 }
