Refactor linting tasks and update dependencies
- Renamed the lint script in package.json to lint-all for clarity.
- Updated '@ls-stack/extended-lint' dependency to version 0.51.0 in package.json and pnpm-lock.yaml.
- Enhanced VSCode tasks to include a separate lint-all task for comprehensive linting.
- Improved ESLint configuration by removing unnecessary commented-out rules and ensuring consistency across files.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,9 +9,14 @@
       "script": "lib:test:ui"
     },
     {
-      "label": "lint",
+      "label": "lib lint",
       "type": "npm",
-      "script": "lint"
+      "script": "lib:lint"
+    },
+    {
+      "label": "lint all",
+      "type": "npm",
+      "script": "lint-all"
     }
   ]
 }
