Add support for `cx` prop in JSX transformations
- Introduced a new `handleJsxCxProp` function to process the `cx` prop for conditional class handling in JSX elements.
- Updated the Babel plugin to integrate `cx` prop handling before styled component transformations.
- Added comprehensive tests to validate the functionality and error handling of the `cx` prop.
- Enhanced documentation in the `SPEC.md` and created a new `cx-prop.md` specification file detailing its usage and integration with other props.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lib:build": "pnpm --filter vindur run build",
     "lib:lint": "pnpm --filter vindur run lint",
     "lib:test": "pnpm --filter vindur run test",
-    "lib:test:ui": "pnpm --filter vindur run test:ui"
+    "lib:test:ui": "pnpm --filter vindur run test:ui",
+    "generate-spec": "node scripts/generate-spec-index.ts"
   },
   "license": "MIT",
   "type": "module",
