Add `sync-ai` script and update project configuration
- Introduced a new `sync-ai` script to synchronize AI guidelines from `CLAUDE.md` to `.cursor/rules/global.mdc`.
- Updated `package.json` to include the `sync-ai` command in the scripts section.
- Added a new `global.mdc` file to define project structure and development commands.
- Enhanced VSCode tasks to include a task for the new `sync-ai` script.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,11 @@
       "label": "lint all",
       "type": "npm",
       "script": "lint-all"
+    },
+    {
+      "label": "sync AI",
+      "type": "npm",
+      "script": "sync-ai"
     }
   ]
 }
