--- a/lib/tsconfig.prod.json
+++ b/lib/tsconfig.prod.json
@@ -4,7 +4,7 @@
     "outDir": "./dist",
     "noEmit": false,
     "declaration": true,
-    "removeComments": false,
+    "removeComments": false
   },
-  "include": ["src/*"]
+  "include": ["src/*", "tests/*"]
 }
