Add end-to-end testing setup for Vindur
- Introduced a new `e2e-tests` package for end-to-end testing using Playwright.
- Added scripts for running tests and generating reports in the `e2e-tests` package.
- Created a Playwright configuration file and a sample React application for testing.
- Updated the main project files to include the new `e2e-tests` package in the workspace and added relevant dependencies.
- Enhanced documentation to guide users on running the e2e tests and understanding the test structure.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,11 @@
       "label": "sync AI",
       "type": "npm",
       "script": "sync-ai"
+    },
+    {
+      "label": "run app test",
+      "type": "npm",
+      "script": "run-app-test"
     }
   ]
 }
