--- a/vite/package.json
+++ b/vite/package.json
@@ -9,7 +9,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     }
   },
   "files": [
@@ -18,19 +19,24 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "tsc --noEmit && eslint src --ext .ts",
     "tsc": "tsc --noEmit",
     "eslint": "eslint src --ext .ts"
   },
-  "dependencies": {},
   "peerDependencies": {
     "vite": "^5.0.0 || ^6.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.1",
+    "@ls-stack/utils": "^3.17.1",
     "@types/node": "^22.0.0",
-    "tsup": "^8.0.0",
+    "eslint": "^9.32.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.6.3",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vitest": "^3.2.4"
   },
   "keywords": [
     "vite",
