--- a/vite/tsconfig.json
+++ b/vite/tsconfig.json
@@ -3,11 +3,12 @@
   "compilerOptions": {
     "outDir": "./dist",
     "declaration": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "target": "ES2020",
-    "module": "ESNext"
+    "module": "ESNext",
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
