Add end-to-end testing setup for Vindur
- Introduced a new `e2e-tests` package for end-to-end testing using Playwright.
- Added scripts for running tests and generating reports in the `package.json` of the new package.
- Created a Playwright configuration file and a basic test structure to validate the Vindur library's functionality.
- Updated the main project files to include the new `e2e-tests` package in the workspace and added relevant commands to the VSCode tasks.
- Enhanced documentation in the `e2e-tests` directory to guide users on setting up and running tests.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,16 @@
       "label": "run app test",
       "type": "npm",
       "script": "run-app-test"
+    },
+    {
+      "label": "e2e test",
+      "type": "npm",
+      "script": "e2e:test"
+    },
+    {
+      "label": "build",
+      "type": "npm",
+      "script": "build"
     }
   ]
 }
