--- a/lib/package.json
+++ b/lib/package.json
@@ -39,31 +39,31 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "colord": "^2.9.3"
+    "colord": "catalog:"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.8",
-    "@babel/generator": "^7.28.0",
-    "@ls-stack/extended-lint": "^0.51.0",
-    "@ls-stack/utils": "^3.17.1",
-    "@types/babel__core": "^7.20.5",
-    "@types/babel__generator": "^7.27.0",
-    "@types/node": "^24.1.0",
-    "@types/react": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "@vitest/ui": "^3.2.4",
-    "eslint": "^9.31.0",
-    "eslint-plugin-unicorn": "^60.0.0",
-    "eslint-plugin-vitest": "^0.5.4",
-    "prettier": "^3.6.2",
-    "react": "^18.2.0",
-    "tsm": "^2.3.0",
-    "tsup": "^8.5.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.6",
-    "vitest": "^3.2.4"
+    "@babel/core": "catalog:",
+    "@babel/generator": "catalog:",
+    "@ls-stack/extended-lint": "catalog:",
+    "@ls-stack/utils": "catalog:",
+    "@types/babel__core": "catalog:",
+    "@types/babel__generator": "catalog:",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@typescript-eslint/eslint-plugin": "catalog:",
+    "@typescript-eslint/parser": "catalog:",
+    "@vitest/ui": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-unicorn": "catalog:",
+    "eslint-plugin-vitest": "catalog:",
+    "prettier": "catalog:",
+    "react": "catalog:",
+    "tsm": "catalog:",
+    "tsup": "catalog:",
+    "typescript": "catalog:",
+    "typescript-eslint": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:"
   },
   "peerDependencies": {
     "@babel/core": "^7.0.0",
