--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@types/node": "^24.1.0"
+    "@types/node": "catalog:",
+    "typescript": "catalog:"
   }
 }
