--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vindur/vite",
+  "name": "@vindur/vite-plugin",
   "version": "0.1.0",
   "description": "Vite plugin for Vindur CSS-in-JS library",
   "type": "module",
@@ -29,14 +29,17 @@
     "vite": "^5.0.0 || ^6.0.0"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.27.1",
-    "@ls-stack/utils": "^3.17.1",
-    "@types/node": "^22.0.0",
-    "eslint": "^9.32.0",
-    "tsup": "^8.5.0",
-    "typescript": "^5.6.3",
-    "vite": "^6.0.0",
-    "vitest": "^3.2.4"
+    "@babel/preset-typescript": "catalog:",
+    "@ls-stack/utils": "catalog:",
+    "@types/node": "catalog:",
+    "eslint": "catalog:",
+    "tsup": "catalog:",
+    "typescript": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:"
+  },
+  "dependencies": {
+    "vindur": "workspace:*"
   },
   "keywords": [
     "vite",
