Add ESLint configuration and update dependencies for improved linting
- Introduced a new base ESLint configuration in `eslint.config.base.ts` to standardize linting rules across the project.
- Added ESLint plugins for TypeScript, Unicorn, and Vitest to enhance linting capabilities.
- Updated `package.json` and `pnpm-lock.yaml` to include new ESLint dependencies.
- Created specific ESLint configurations for `app-test` and `e2e-tests` to ensure consistent linting in test environments.
- Removed outdated ESLint configuration files to streamline the codebase.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,17 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "catalog:",
+    "@ls-stack/extended-lint": "catalog:",
     "@types/node": "catalog:",
-    "typescript": "catalog:"
+    "@typescript-eslint/eslint-plugin": "catalog:",
+    "@typescript-eslint/parser": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-unicorn": "catalog:",
+    "eslint-plugin-vitest": "catalog:",
+    "jiti": "catalog:",
+    "prettier": "catalog:",
+    "typescript": "catalog:",
+    "typescript-eslint": "catalog:"
   }
 }
