--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,38 +5,40 @@ packages:
   - e2e-tests
 
 onlyBuiltDependencies:
-  - "@swc/core"
+  - '@swc/core'
   - esbuild
 
 catalog:
-  "@babel/core": "^7.28.0"
-  "@babel/generator": "^7.28.0"
-  "@babel/preset-react": "^7.27.1"
-  "@babel/preset-typescript": "^7.27.1"
-  "@ls-stack/extended-lint": "^0.51.0"
-  "@ls-stack/utils": "^3.17.1"
-  "@playwright/test": "^1.54.1"
-  "@types/babel__core": "^7.20.5"
-  "@types/babel__generator": "^7.27.0"
-  "@types/node": "^24.1.0"
-  "@types/react": "^19.1.8"
-  "@types/react-dom": "^19.1.6"
-  "@typescript-eslint/eslint-plugin": "^8.38.0"
-  "@typescript-eslint/parser": "^8.38.0"
-  "@vitejs/plugin-react": "^4.7.0"
-  "@vitejs/plugin-react-swc": "^3.11.0"
-  "@vitest/ui": "^3.2.4"
-  colord: "^2.9.3"
-  eslint: "^9.32.0"
-  eslint-plugin-unicorn: "^60.0.0"
-  eslint-plugin-vitest: "^0.5.4"
-  prettier: "^3.6.2"
-  react: "^19.1.0"
-  react-dom: "^19.1.0"
-  tsm: "^2.3.0"
-  tsup: "^8.5.0"
-  typescript: "^5.9.1-rc"
-  typescript-eslint: "^8.38.0"
-  vite: "^7.0.6"
-  vite-plugin-inspect: "^11.3.2"
-  vitest: "^3.2.4"
+  '@babel/core': '^7.28.0'
+  '@babel/generator': '^7.28.0'
+  '@babel/preset-react': '^7.27.1'
+  '@babel/preset-typescript': '^7.27.1'
+  '@eslint/js': '^9.32.0'
+  '@ls-stack/extended-lint': '^0.51.0'
+  '@ls-stack/utils': '^3.17.1'
+  '@playwright/test': '^1.54.1'
+  '@types/babel__core': '^7.20.5'
+  '@types/babel__generator': '^7.27.0'
+  '@types/node': '^24.1.0'
+  '@types/react': '^19.1.8'
+  '@types/react-dom': '^19.1.6'
+  '@typescript-eslint/eslint-plugin': '^8.38.0'
+  '@typescript-eslint/parser': '^8.38.0'
+  '@vitejs/plugin-react': '^4.7.0'
+  '@vitejs/plugin-react-swc': '^3.11.0'
+  '@vitest/ui': '^3.2.4'
+  colord: '^2.9.3'
+  eslint: '^9.32.0'
+  eslint-plugin-unicorn: '^60.0.0'
+  eslint-plugin-vitest: '^0.5.4'
+  prettier: '^3.6.2'
+  react: '^19.1.0'
+  react-dom: '^19.1.0'
+  tsm: '^2.3.0'
+  tsup: '^8.5.0'
+  jiti: '^2.0.0'
+  typescript: '^5.9.1-rc'
+  typescript-eslint: '^8.38.0'
+  vite: '^7.0.6'
+  vite-plugin-inspect: '^11.3.2'
+  vitest: '^3.2.4'
