Update package.json files to enhance build and formatting scripts
- Renamed the build script in the root package.json to `build-all` for clarity.
- Added new formatting scripts (`format-all`, `format-all:check`) to the root package.json for consistent code formatting across the project.
- Updated the app-test package.json to include build, preview, lint, and formatting scripts, improving development workflow.
- Enhanced e2e-tests and vite-plugin package.json files with formatting scripts to ensure code consistency.
- Standardized linting commands across packages to use `pnpm` for better integration.

--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "test": "pnpm -r run test",
     "test:watch": "pnpm --filter vindur run test:watch",
     "test:ui": "pnpm --filter vindur run test:ui",
-    "build": "pnpm -r run build",
+    "build-all": "pnpm -r run build",
     "lint-all": "pnpm -r run lint",
-    "dev": "pnpm --filter vindur-test-app run dev",
+    "format-all": "pnpm -r run format",
+    "format-all:check": "pnpm -r run format:check",
     "lib:build": "pnpm --filter vindur run build",
     "lib:lint": "pnpm --filter vindur run lint",
     "lib:test": "pnpm --filter vindur run test",
     "lib:test:ui": "pnpm --filter vindur run test:ui",
-    "vite:test": "pnpm --filter vite run test",
+    "vite-plugin:test": "pnpm --filter vite-plugin run test",
     "e2e:test": "pnpm --filter e2e-tests run test",
-    "e2e:show-report": "pnpm --filter e2e-tests run show-report",
     "generate-spec": "node scripts/generate-spec-index.ts",
     "sync-ai": "node scripts/sync-ai.ts",
     "run-app-test": "pnpm --filter vindur-test-app dev"
