Update ESLint configuration, package.json scripts, and clean up codebase
- Added a rule to disable default exports in ESLint configuration for `eslint.config.ts`.
- Updated `pnpm-workspace.yaml` to always use color output.
- Modified VSCode settings to include ESLint working directories.
- Removed the obsolete `eslint.config.ts` file from `app-test`.
- Simplified linting scripts in `app-test/package.json` by removing ESLint command.
- Refactored `App.tsx` and `Child.tsx` for improved code consistency and readability.
- Deleted the unused `ForwardRef.tsx` component to streamline the codebase.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,8 @@ onlyBuiltDependencies:
   - '@swc/core'
   - esbuild
 
+color: always
+
 catalog:
   '@babel/core': '^7.28.0'
   '@babel/generator': '^7.28.0'
