Enhance e2e test environment setup by adding dedicated presentation for e2e task and implementing a safe random port allocation in startEnv function. This improves port management during test execution.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,7 +31,11 @@
     {
       "label": "e2e test",
       "type": "npm",
-      "script": "e2e:test"
+      "script": "e2e:test",
+      "presentation": {
+        "panel": "dedicated",
+        "clear": true
+      }
     },
     {
       "label": "build",
