Enhance e2e tests and update package configurations
- Added TypeScript compilation and linting scripts to `package.json` for improved code quality checks.
- Refactored e2e test files to utilize `data-testid` attributes for more reliable element selection.
- Updated test cases to validate CSS properties for styled components and scoped variables.
- Improved test structure by configuring test environments and cleanup processes for better resource management.

--- a/lib/package.json
+++ b/lib/package.json
@@ -8,7 +8,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "lint": "pnpm tsc && pnpm eslint",
-    "tsc": "tsc -p tsconfig.prod.json",
+    "tsc": "tsc --noEmit",
     "eslint": "CI=true eslint --color src/ tests/ --max-warnings 0 --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
