Update build scripts and enhance type definitions
- Modified the `build-all` script in `package.json` to run builds for specific filters.
- Changed the task label in `.vscode/tasks.json` to reflect the updated build script.
- Introduced `VindurTransformResult` type in `transform.ts` and updated related function signatures for better type safety.
- Refactored logging in `vite-plugin/src/index.ts` to improve clarity and maintainability.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,9 +38,9 @@
       }
     },
     {
-      "label": "build",
+      "label": "build all",
       "type": "npm",
-      "script": "build"
+      "script": "build-all"
     }
   ]
 }
