Enhance testing framework and update documentation
- Added a new `e2e:test:ui` script to `package.json` for running end-to-end tests with a UI.
- Updated `CLAUDE.md` and `.cursor/rules/global.mdc` to enforce best practices in test structuring, specifically discouraging the use of top-level `describe` blocks.
- Refactored multiple test files to improve readability and maintainability by ensuring consistent use of `beforeAll`, `afterAll`, and test case structures.
- Improved Playwright configuration and test cases to ensure better handling of CSS properties and animations.
- Updated VSCode tasks to reflect new testing scripts and enhance developer experience.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lib:test:ui": "pnpm --filter vindur run test:ui",
     "vite-plugin:test": "pnpm --filter vite-plugin run test",
     "e2e:test": "pnpm --filter e2e-tests run test",
+    "e2e:test:ui": "pnpm --filter e2e-tests run test:ui",
     "e2e:eslint": "pnpm --filter e2e-tests run eslint",
     "generate-spec": "node scripts/generate-spec-index.ts",
     "sync-ai": "node scripts/sync-ai.ts",
