--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,14 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "test UI",
+      "label": "lib test UI",
       "type": "npm",
       "script": "lib:test:ui"
+    },
+    {
+      "label": "e2e test UI",
+      "type": "npm",
+      "script": "e2e:test:ui"
     },
     {
       "label": "lib lint",
