Update ESLint configuration and enhance app-test structure
- Modified ESLint configuration to include additional config files for linting.
- Updated `pnpm-lock.yaml` to include new dependencies and ensure consistency.
- Added `vindur` dependency to `app-test/package.json` for workspace management.
- Enhanced `tsconfig.json` in `app-test` to support base URL and path mappings.
- Refactored `App.tsx` to utilize new components and global styles, removing the `Child` component.
- Introduced new components and demos showcasing Vindur features, including styled components, CSS props, and animations.
- Created global styles and main layout components to improve app structure and styling consistency.

--- a/lib/package.json
+++ b/lib/package.json
@@ -39,11 +39,11 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "colord": "catalog:"
+    "colord": "catalog:",
+    "@babel/core": "catalog:",
+    "@babel/generator": "catalog:"
   },
   "devDependencies": {
-    "@babel/core": "catalog:",
-    "@babel/generator": "catalog:",
     "@ls-stack/utils": "catalog:",
     "@types/babel__core": "catalog:",
     "@types/babel__generator": "catalog:",
