Refactor and enhance app-test structure with new features and cleanup
- Updated CLAUDE.md to clarify CSS-in-JS guidelines and added examples for static and dynamic CSS usage.
- Introduced a new script for cleaning empty folders in the project.
- Enhanced Vite configuration with import aliases for better path resolution.
- Removed unused CSS file and refactored demo components to improve readability and maintainability.
- Updated package.json files to include new scripts and dependencies, ensuring consistency across the project.
- Improved styled components and demos to showcase Vindur features more effectively.

--- a/lib/package.json
+++ b/lib/package.json
@@ -12,8 +12,7 @@
     "eslint": "CI=true eslint --color src/ tests/ --max-warnings 0 --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "build": "pnpm lint && pnpm build:no-test",
-    "build:no-test": "tsup --minify --dts",
+    "build": "tsup",
     "npm-publish": "pnpm publish --access=public",
     "pre-publish": "../scripts/check-if-is-sync.sh && pnpm build"
   },
@@ -32,6 +31,11 @@
       "types": "./dist/main.d.ts",
       "import": "./dist/main.js",
       "require": "./dist/main.cjs"
+    },
+    "./transform": {
+      "types": "./dist/transform.d.ts",
+      "import": "./dist/transform.js",
+      "require": "./dist/transform.cjs"
     }
   },
   "sideEffects": false,
