--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "e2e:eslint": "pnpm --filter e2e-tests run eslint",
     "generate-spec": "node scripts/generate-spec-index.ts",
     "sync-ai": "node scripts/sync-ai.ts",
-    "run-app-test": "pnpm --filter vindur-test-app dev"
+    "run-app-test": "pnpm --filter vindur-test-app dev",
+    "clean-empty-folders": "node scripts/remove-empty-folders.ts"
   },
   "license": "MIT",
   "type": "module",
