Update dependencies and enhance Vite configuration
- Added Rollup version 4.46.1 to package.json for improved build performance.
- Enabled sourcemap generation in Vite configuration for better debugging.
- Updated dynamic CSS color error message for clarity in main.ts.
- Enhanced transform function to support sourcemaps, improving development experience.

--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -33,6 +33,7 @@
     "@types/node": "catalog:",
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "rollup": "^4.46.1",
     "tsup": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:"
