Add lint-tsc-all script and enhance StyledComponentsDemo with new examples

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build-all": "pnpm --filter vindur run build && pnpm --filter vite-plugin run build",
     "lint-all": "pnpm -r --no-bail run lint",
     "tsc-all": "pnpm -r --no-bail run tsc",
+    "lint-tsc-all": "pnpm run build-all && pnpm run tsc-all && pnpm run eslint-all",
     "format-all": "pnpm -r --no-bail run format",
     "eslint-all": "pnpm -r --no-bail run eslint",
     "lib:build": "pnpm --filter vindur run build",
