Add support for CSS layers with new layer() function and update related tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,6 +46,11 @@
       "label": "build all",
       "type": "npm",
       "script": "build-all"
+    },
+    {
+      "label": "lib test update snapshots",
+      "type": "npm",
+      "script": "lib:test:update"
     }
   ]
 }
