--- a/lib/package.json
+++ b/lib/package.json
@@ -7,6 +7,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
+    "test:update": "vitest --update",
     "lint": "pnpm tsc && pnpm eslint",
     "tsc": "tsc --noEmit",
     "eslint": "CI=true eslint --color src/ tests/ --max-warnings 0 --fix",
