Add format-all script to VSCode tasks and update ESLint configuration to disable '@ls-stack/use-top-level-regex' rule

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -51,6 +51,11 @@
       "label": "lib test update snapshots",
       "type": "npm",
       "script": "lib:test:update"
+    },
+    {
+      "label": "format all",
+      "type": "npm",
+      "script": "format-all"
     }
   ]
 }
