--- a/vite-plugin/tsconfig.json
+++ b/vite-plugin/tsconfig.json
@@ -10,11 +10,6 @@
     "module": "ESNext",
     "skipLibCheck": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
