Add @ls-stack/node-utils dependency and enhance VSCode tasks for package publishing
- Added @ls-stack/node-utils as a dependency in package.json.
- Updated pnpm-lock.yaml to include the new dependency resolution.
- Introduced a new VSCode task for bumping version and publishing selected packages, allowing for streamlined package management.
- Renamed @vindur/vite-plugin to @vindur-css/vite-plugin in multiple package.json files for consistency.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -56,6 +56,47 @@
       "label": "format all",
       "type": "npm",
       "script": "format-all"
+    },
+    {
+      "label": "bump version and publish selected package",
+      "type": "shell",
+      "command": "node scripts/publishPackage.ts ${input:packageName} ${input:version}",
+      "group": "build",
+      "presentation": {
+        "clear": true
+      }
+    }
+  ],
+  "inputs": [
+    {
+      "id": "packageName",
+      "description": "Select package to publish",
+      "default": "vindur",
+      "type": "pickString",
+      "options": [
+        "vindur",
+        "vite-plugin"
+      ]
+    },
+    {
+      "id": "version",
+      "description": "Select version bump type",
+      "default": "patch",
+      "type": "pickString",
+      "options": [
+        {
+          "label": "patch",
+          "value": "patch"
+        },
+        {
+          "label": "minor",
+          "value": "minor"
+        },
+        {
+          "label": "major",
+          "value": "major"  
+        }
+      ]
     }
   ]
 }
