Add test for extending styled components from imported custom components
- Introduced a new test case to validate the extension of styled components from imported custom components in the library.
- Ensured that the generated CSS and component code match expected outputs, enhancing test coverage for styled component functionality.

--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -28,7 +28,8 @@
     "pre-publish": "../scripts/check-if-is-sync.sh && pnpm build"
   },
   "peerDependencies": {
-    "vite": "^5.0.0 || ^6.0.0 || ^7.0.0"
+    "vite": "^5.0.0 || ^6.0.0 || ^7.0.0",
+    "vindur": "*"
   },
   "devDependencies": {
     "@ls-stack/utils": "catalog:",
@@ -38,9 +39,7 @@
     "rollup": "^4.46.1",
     "tsup": "catalog:",
     "typescript": "catalog:",
-    "vite": "catalog:"
-  },
-  "dependencies": {
+    "vite": "catalog:",
     "vindur": "workspace:*"
   },
   "keywords": [
