Enhance ESLint configuration and add new test for CSS import functionality
- Updated ESLint working directories format in settings.json for improved readability.
- Introduced a new test case to validate importing CSS and functions from another file, ensuring correct styling and component rendering.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
   "typescript.preferences.includePackageJsonAutoImports": "on",
-  "eslint.workingDirectories": [{ "mode": "auto" }]
+  "eslint.workingDirectories": [
+    {
+      "mode": "auto"
+    }
+  ],
+  "cSpell.words": ["guam"]
 }
