feat: integrate source map generation for CSS rules
- Added support for generating source maps for CSS rules in the Vindur plugin.
- Introduced `CssSourceMapGenerator` to track mappings between generated CSS and original source locations.
- Updated CSS processing functions to include source location information, enhancing debugging capabilities.
- Modified the transform function to return both CSS and its corresponding source map when enabled.

--- a/lib/package.json
+++ b/lib/package.json
@@ -46,7 +46,8 @@
   "dependencies": {
     "colord": "catalog:",
     "@babel/core": "catalog:",
-    "@babel/generator": "catalog:"
+    "@babel/generator": "catalog:",
+    "source-map": "catalog:"
   },
   "devDependencies": {
     "@ls-stack/utils": "catalog:",
