--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,6 +16,7 @@ catalog:
   '@types/babel__core': ^7.20.5
   '@types/babel__generator': ^7.27.0
   '@types/node': ^24.1.0
+  '@types/source-map': ^0.5.7
   '@types/react': ^19.1.8
   '@types/react-dom': ^19.1.6
   '@typescript-eslint/eslint-plugin': ^8.38.0
@@ -31,6 +32,7 @@ catalog:
   prettier: ^3.6.2
   react: ^19.1.0
   react-dom: ^19.1.0
+  source-map: ^0.7.4
   tsm: ^2.3.0
   tsup: ^8.5.0
   typescript: ^5.9.1-rc
