chore: update dependencies and enhance source map generation
- Removed deprecated '@types/source-map' dependency from pnpm-lock.yaml and package.json.
- Added '@jridgewell/trace-mapping' dependency with version 0.3.30 to support improved source map functionality.
- Enhanced the CSS processing context to track source content for better source map generation.
- Updated various visitor handlers to capture location information from template literals for accurate source mapping.
- Introduced tests for CSS source map generation to ensure correctness and reliability.

--- a/lib/package.json
+++ b/lib/package.json
@@ -44,12 +44,13 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "colord": "catalog:",
     "@babel/core": "catalog:",
     "@babel/generator": "catalog:",
+    "colord": "catalog:",
     "source-map": "catalog:"
   },
   "devDependencies": {
+    "@jridgewell/trace-mapping": "^0.3.30",
     "@ls-stack/utils": "catalog:",
     "@types/babel__core": "catalog:",
     "@types/babel__generator": "catalog:",
