refactor: improve run-app-test script and restructure style flag utilities
- Updated the `run-app-test` script in package.json to build all packages before running the test app, ensuring the latest changes are included.
- Refactored style flag utilities by exporting the `StyleFlag` type and moving helper functions to a new `styled-helpers.ts` file for better organization and maintainability.
- Enhanced variable handlers to utilize the new utility functions, streamlining the codebase.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "e2e:eslint": "pnpm --filter e2e-tests run eslint",
     "generate-spec": "node scripts/generate-spec-index.ts",
     "sync-ai": "node scripts/sync-ai.ts",
-    "run-app-test": "pnpm --filter vindur-test-app dev",
+    "run-app-test": "pnpm build-all && pnpm --filter vindur-test-app dev",
     "app-test:build": "pnpm --filter vindur-test-app run build",
     "clean-empty-folders": "node scripts/remove-empty-folders.ts"
   },
