--- a/lib/package.json
+++ b/lib/package.json
@@ -24,19 +24,16 @@
   "repository": "github:lucasols/vindur",
   "author": "Lucas Santos",
   "type": "module",
-  "main": "./dist/main.cjs",
   "module": "./dist/main.js",
   "types": "./dist/main.d.ts",
   "exports": {
     ".": {
       "types": "./dist/main.d.ts",
-      "import": "./dist/main.js",
-      "require": "./dist/main.cjs"
+      "import": "./dist/main.js"
     },
     "./transform": {
       "types": "./dist/transform.d.ts",
-      "import": "./dist/transform.js",
-      "require": "./dist/transform.cjs"
+      "import": "./dist/transform.js"
     }
   },
   "sideEffects": false,
