chore: update pnpm lockfile and workspace configuration
- Adjusted the version specifier for '@typescript-eslint/parser' in both pnpm-lock.yaml and pnpm-workspace.yaml to remove the caret (^) for consistency.
- Added '@typescript-eslint/parser' as a catalog dependency in the eslint-plugin package.json.
- Updated the eslint-plugin's check-transform rule to remove caching logic, simplifying the transformation process and focusing on error reporting.
- Enhanced the createTester utility to include TypeScript parser options for improved testing capabilities.

--- a/eslint-plugin/package.json
+++ b/eslint-plugin/package.json
@@ -41,6 +41,7 @@
     "@ls-stack/utils": "catalog:",
     "@types/eslint": "^9.6.1",
     "@types/node": "catalog:",
+    "@typescript-eslint/parser": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
     "eslint-vitest-rule-tester": "^2.2.1",
