--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,11 +17,11 @@ catalog:
   '@types/babel__core': ^7.20.5
   '@types/babel__generator': ^7.27.0
   '@types/node': ^24.1.0
-  '@types/source-map': ^0.5.7
   '@types/react': ^19.1.8
   '@types/react-dom': ^19.1.6
+  '@types/source-map': ^0.5.7
   '@typescript-eslint/eslint-plugin': ^8.38.0
-  '@typescript-eslint/parser': ^8.38.0
+  '@typescript-eslint/parser': 8.38.0
   '@vitejs/plugin-react': ^4.7.0
   '@vitejs/plugin-react-swc': ^3.11.0
   '@vitest/ui': ^3.2.4
